# app/models/messagerie.model.js
@@ -3,7 +3,7 @@ const mongoose = require('mongoose');
 const messagerieSchema = mongoose.Schema({
     message: String,
     object: String,
-    datecreation:Date,
+   
     from: String,
     to : String
 }, {
